Fix About/Skills column overlap on mobile and tablets
The About Me (col-sm-7) and Skills (col-sm-5) columns were
overlapping on screens between 768-991px. Force them to stack
below 992px. Also reduce font sizes on mobile for better fit.

via [Happy](https://happy.engineering)

--- a/css/main.css
+++ b/css/main.css
@@ -474,8 +474,31 @@ HOBBIES
 MEDIA
 *******************************************/
 
+@media (max-width: 991px)
+{
+    /* Force About Me and Skills to stack on tablets and phones */
+    .col-xs-12.col-sm-7,
+    .col-xs-12.col-sm-5
+    {
+        width: 100% !important;
+        float: none !important;
+    }
+}
+
 @media (max-width: 767px)
 {
+    /* Scale down font sizes for mobile */
+    .box p
+    {
+        font-size: 1.1em;
+    }
+
+    .box h2
+    {
+        font-size: 1.5em;
+    }
+
+    /* Jobs: stack company/date above description */
     .job .col-xs-2,
     .job .col-xs-10
     {
@@ -493,6 +516,12 @@ MEDIA
     .job .profession
     {
         margin-top: 2px;
+        font-size: 1.3em;
+    }
+
+    .job .description
+    {
+        font-size: 1.05em;
     }
 
     .job
@@ -507,6 +536,7 @@ MEDIA
         border-bottom: none;
     }
 
+    /* Education: stack vertically */
     #education .year
     {
         width: auto;
@@ -524,6 +554,11 @@ MEDIA
     #education .description:after
     {
         display: none;
+    }
+
+    #education .description h3
+    {
+        font-size: 1.3em;
     }
 }
 
